--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dix": "^0.0.0-wip",
+    "framer-motion": "^12.23.6",
     "gray-matter": "^4.0.3",
     "input": "^1.0.1",
     "lucide-react": "^0.441.0",
@@ -35,6 +36,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-icons": "^5.5.0",
     "resend": "^4.0.0",
     "shadcn-ui": "^0.9.1",
     "sonner": "^1.5.0",
