--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
     "props": "^0.2.3",
+    "puppeteer": "^24.14.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
